Update landing page to be device friendly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
       <div class="bg">
-      <div class="pos-div">
+      <div>
         <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo" />
         <h1 class="main-description">We believe in openness,</h1>
         <h1 class="main-description">education and clean code</h1>
@@ -25,13 +25,14 @@
                     <td><b>If you want to pass by for a talk:</b></td>
                 </tr>
                 <tr>
-                    <td><a style="color: white" href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">Str. Dorului, 2A, Sibiu, Romania</a></td>
+                    <td><a style="color: white" href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">Str. Dorului, Nr. 20, 4A, Sibiu, Romania</a></td>
                 </tr>
             </table>
             </div>
       </div>
           <div id="big-dot-div">
             <span class="big-dot"></span>
+            <span class="new-website">New website <br> coming soon</span>
           </div>
       </div>
   </body>
