--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="inner">    
         <table cellspacing="15">
                 <tr>
-                    <td rowspan="2"><input type="button" value="Contacs Us" class="button"></td>
+                    <td rowspan="2"><a class="button" href="mailto:office@agilefreaks.com">Contacs Us</a></td>
                     <td rowspan="2">
                         <span class="dot"></span>
                         <span class="dot"></span>
