--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="shortcut icon" type="image/png" href="images/logo-symbol.png"/>
   </head>
   <body>
       <div class="bg">
