--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="shortcut icon" type="image/png" href="images/logo-symbol.png"/>
+      <title>Agile Freaks</title>
   </head>
   <body>
       <div class="bg">
