--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo" />
         <h1 class="main-description">We believe in openness,</h1>
         <h1 class="main-description">education and clean code</h1>
-        <p class="second-first-description">We build well crafter tools that are delightfull to use, so that our</p>
+        <p class="second-first-description">We build well crafter tools that are delightful to use, so that our</p>
         <p class="second-description">clients can grow their business sustainable. We do this from an</p>
         <p class="second-description">environment that puts our personal growth at the core.</p>
         <div id="inner">    
         <table cellspacing="15">
                 <tr>
-                    <td rowspan="2"><a class="button" href="mailto:office@agilefreaks.com">Contacs Us</a></td>
+                    <td rowspan="2"><a class="button" href="mailto:office@agilefreaks.com">Contact Us</a></td>
                     <td rowspan="2">
                         <span class="dot"></span>
                         <span class="dot"></span>
