--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo" />
         <h1 class="main-description">We believe in openness,</h1>
         <h1 class="main-description">education and clean code</h1>
-        <p class="second-first-description">We build well crafter tools that are delightful to use, so that our</p>
+        <p class="second-first-description">We build well crafted tools that are delightful to use, so that our</p>
         <p class="second-description">clients can grow their business sustainable. We do this from an</p>
         <p class="second-description">environment that puts our personal growth at the core.</p>
         <div id="inner">    
