Replace table layout with flexbox

--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
         <p class="second-first-description">We build well crafted tools that are delightful to use, so that our</p>
         <p class="second-description">clients can grow their business sustainable. We do this from an</p>
         <p class="second-description">environment that puts our personal growth at the core.</p>
-        <div id="inner">    
-        <table cellspacing="15">
-                <tr>
-                    <td rowspan="2"><a class="button" href="mailto:office@agilefreaks.com">Contact Us</a></td>
-                    <td rowspan="2">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </td>
-                    <td><b>If you want to pass by for a talk:</b></td>
-                </tr>
-                <tr>
-                    <td><a style="color: white" href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">Str. Dorului, Nr. 20, 4A, Sibiu, Romania</a></td>
-                </tr>
-            </table>
+        <div id="inner">
+            <div class="contact">
+                <a class="button" href="mailto:office@agilefreaks.com">Contact Us</a>
+                <div class="dot-divider">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <b>If you want to pass by for a talk:</b>
+                    <address>
+                        <a href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">
+                            Str. Dorului, Nr. 20, 4A, Sibiu, Romania
+                        </a>
+                    </address>
+                </div>
             </div>
+        </div>
       </div>
           <div id="big-dot-div">
             <span class="big-dot"></span>
