--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="description">
         <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo" />
         <h1 class="main-description">We believe in openness, education and clean code</h1>
-        <p class="second-description">We build well crafted tools that are delightful to use, so that our clients can grow their business sustainable. We do this from an environment that puts our personal growth at the core.</p>
+        <p class="second-description">We build well crafted tools that are delightful to use, so that our clients can grow their business sustainably. We do this from an environment that puts our personal growth at the core.</p>
         <div id="inner">
             <div class="contact">
                 <a class="button" href="mailto:office@agilefreaks.com">Contact Us</a>
