Refactor using BEM

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       <div class="bg">
       <div class="description">
         <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo" />
-        <h1 class="main-description">We believe in openness, education and clean code</h1>
-        <p class="second-description">We build well crafted tools that are delightful to use, so that our clients can grow their business sustainably. We do this from an environment that puts our personal growth at the core.</p>
+        <h1 class="description__header">We believe in openness, education and clean code</h1>
+        <p class="description__paragraph">We build well crafted tools that are delightful to use, so that our clients can grow their business sustainably. We do this from an environment that puts our personal growth at the core.</p>
         <div id="inner">
             <div class="contact">
                 <a class="button" href="mailto:office@agilefreaks.com">Contact Us</a>
-                <div class="dot-divider">
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
+                <div class="divider">
+                    <span class="divider__dot"></span>
+                    <span class="divider__dot"></span>
+                    <span class="divider__dot"></span>
+                    <span class="divider__dot"></span>
                 </div>
                 <div>
                     <b>If you want to pass by for a talk:</b>
-                    <address>
+                    <address class="contact__address">
                         <a href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">
                             Str. Dorului, Nr. 20, 4A, Sibiu, Romania
                         </a>
