--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         </div>
                         <div>
                             <b>If you want to pass by for a talk:</b>
-                            <address class="contact__address">
-                                <a href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">
+                            <address>
+                                <a class="contact__address" href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">
                                     Str. Dorului, Nr. 20, 4A, Sibiu, Romania
                                 </a>
                             </address>
