--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <link rel="shortcut icon" type="image/png" href="images/logo-symbol.png"/>
-      <title>Agile Freaks</title>
-  </head>
-  <body>
-      <div class="bg">
-      <div>
-        <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo" />
-        <h1 class="main-description">We believe in openness,</h1>
-        <h1 class="main-description">education and clean code</h1>
-        <p class="second-first-description">We build well crafted tools that are delightful to use, so that our</p>
-        <p class="second-description">clients can grow their business sustainable. We do this from an</p>
-        <p class="second-description">environment that puts our personal growth at the core.</p>
-        <div id="inner">    
-        <table cellspacing="15">
-                <tr>
-                    <td rowspan="2"><a class="button" href="mailto:office@agilefreaks.com">Contact Us</a></td>
-                    <td rowspan="2">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </td>
-                    <td><b>If you want to pass by for a talk:</b></td>
-                </tr>
-                <tr>
-                    <td><a style="color: white" href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">Str. Dorului, Nr. 20, 4A, Sibiu, Romania</a></td>
-                </tr>
-            </table>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="shortcut icon" type="image/png" href="images/logo-symbol.png"/>
+        <title>Agile Freaks</title>
+    </head>
+    <body>
+        <div class="bg">
+            <div class="description">
+                <img src="images/agile-freaks-logo.svg" alt="Agile Freaks Logo"/>
+                <h1 class="description__header">We believe in openness, education and clean code</h1>
+                <p class="description__paragraph">We build well crafted tools that are delightful to use, so that our clients
+                    can grow their business sustainably. We do this from an environment that puts our personal growth at the
+                    core.
+                </p>
+                <div id="inner">
+                    <div class="contact">
+                        <a class="button" href="mailto:office@agilefreaks.com">Contact Us</a>
+                        <div class="divider">
+                            <span class="divider__dot"></span>
+                            <span class="divider__dot"></span>
+                            <span class="divider__dot"></span>
+                            <span class="divider__dot"></span>
+                        </div>
+                        <div>
+                            <b>If you want to pass by for a talk:</b>
+                            <address>
+                                <a class="contact__address" href="https://goo.gl/maps/8sDNcNADLeTRqPae9" target="_blank">
+                                    Str. Dorului, Nr. 20, 4A, Sibiu, Romania
+                                </a>
+                            </address>
+                        </div>
+                    </div>
+                </div>
             </div>
-      </div>
-          <div id="big-dot-div">
-            <span class="big-dot"></span>
-          </div>
-      </div>
-  </body>
+            <div id="big-dot-div">
+                <span class="big-dot"></span>
+            </div>
+        </div>
+    </body>
 </html>
